feat: update Faculty class to use ID in toString method and add Identifiable interface for consistent entity identification